--- a/client/cfg.toml
+++ b/client/cfg.toml
@@ -7,7 +7,9 @@ proxy-name = "python_http_file_service" # optional
 subdomain = "python3-http" # optional
 local-port = 3000
 remote-port = 9001
+type = "tcp"
 
 [[forwards]]
 local-port = 3001
 remote-port = 9002
+type = "tcp"
