--- a/client/cfg.toml
+++ b/client/cfg.toml
@@ -1,5 +1,4 @@
-server-host = "localhost"
-server-port = 8910 
+server-addr = "localhost:8910"
 token = "abcdlsj" # optional
 
 [[forwards]]
@@ -8,9 +7,9 @@ subdomain = "python3-http" # optional
 local-port = 3000
 remote-port = 9001
 speed-limit = "100kb"
-type = "tcp"
+proxy-type = "tcp"
 
 [[forwards]]
 local-port = 3001
 remote-port = 9002
-type = "tcp"
+proxy-type = "tcp"
