--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,8 @@
-# fly.toml app configuration file generated for pipefly on 2023-10-08T18:58:15+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "pipefly"
+app = "gnartunnel"
 primary_region = "hkg"
 
 [build]
