--- a/fly.toml
+++ b/fly.toml
@@ -1,38 +1,46 @@
+# fly.toml app configuration file generated for gnar on 2024-09-08T11:38:55+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "gnartunnel"
-primary_region = "hkg"
+app = 'xxx'
+primary_region = 'hkg'
 
 [build]
 
-# Control
-[[services]]
+[http_service]
   internal_port = 8910
-  protocol = "tcp"
+  force_https = true
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
+
+[[services]]
+  protocol = 'tcp'
+  internal_port = 8910
 
   [[services.ports]]
     port = 8910
-  
-# Admin
+
 [[services]]
+  protocol = 'tcp'
   internal_port = 8911
-  protocol = "tcp"
 
   [[services.ports]]
-    handlers = ["http"]
     port = 80
+    handlers = ['http']
 
   [[services.ports]]
-    handlers = ["tls", "http"]
     port = 443
+    handlers = ['tls', 'http']
 
-# Forward TCP
 [[services]]
+  protocol = 'tcp'
   internal_port = 9000
-  protocol = "tcp"
 
   [[services.ports]]
-    handlers = ["tls", "http"]
     port = 9000
+    handlers = ['tls', 'http']
+
+[[vm]]
+  size = 'shared-cpu-1x'
